for mobile browser security reasons dropbox upload button removed on mobile, input clicks on mobile now prevents auto zoom in

--- a/src/assets/css/media-queries.scss
+++ b/src/assets/css/media-queries.scss
@@ -18,6 +18,9 @@
     .d-none-lgt-sm {
         display: none!important;
     }
+    .d-none-mobile {
+        display: none !important;
+    }
     .header-area {
         min-height: 94px !important;
         padding: 0 !important;
